[package]
name = "rusvguez_tilserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resvg = { path = "./resvg/crates/resvg" }
tiny-skia = "0.11.4"
usvg = { path = "./resvg/crates/usvg" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
hex_color = "3.0.0"
