[package]
name = "svg-tileserver"
description = "A high performance SVG Leaflet/MapLibre compatible tile server"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["GaspardCulis"]
repository = "https://github.com/GaspardCulis/svg-tileserver"

[dependencies]
resvg = "0.41.0"
tiny-skia = "0.11.4"
usvg = "0.41.0"
actix-web = "4"
clap = { version = "4.5.4", features = ["derive"] }
